@@ -1,6 +1,7 @@
 GAMS Transfer R
 ==================
 - bug fix in reading symbols with unused UELs
+- bug fix in `getUELs` method with `unusedUELs` argument when the symbol has `NULL` records
 
 GAMS Transfer R v2.6.0
 ==================
